// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Button Snapshots 1`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ ePqhfu"
    type="button"
  >
    contained
  </button>
</DocumentFragment>
`;

exports[`Testing Button Snapshots 2`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ iwbzml"
    type="button"
  >
    outlined
  </button>
</DocumentFragment>
`;

exports[`Testing Button Snapshots 3`] = `
<DocumentFragment>
  <button
    class="sc-bczRLJ cQlmAu"
    type="button"
  >
    text
  </button>
</DocumentFragment>
`;
